<resources>
    <string name="app_name">TopiiChat</string>
    <string name="signup_screen_title">SignUp</string>
    <string name="signup_screen_splash">Splash</string>
    <string name="validatePhone_screen">Validate Phone</string>
    <string name="permission_screen">Permission</string>
    <string name="terms_activity">Terms</string>
    <string name="adelante_terms">Adelante</string>
    <string name="siguiente_button">Siguiente</string>
    <string name="title_permission">Activar permisos</string>
    <string name="text_permissions">Permitir notificaciones y accesos a tus contactos te permite saber cuándo recibes un mensaje y te ayuda a encontrar a personas que conoces.\n\nTu lista de contactos está cifrada y solo tú tienes acceso. TOPII no tiene acceso a ella.</string>
    <string name="valid_phone_title">Introduce tu número\nde teléfono</string>
    <string name="title_otp">Código SMS</string>
    <string name="subtitle_otp">sEscribe el codigo recivido via SMS al %1$s para verificarlo.</string>
    <string name="timer_otp">Renvia el codigo en %1$s minutos </string>
    <string name="button_otp">Continuar</string>
    <string name="phone_number">número de teléfono</string>
    <string name="codigo">Reenviar código</string>
    <string name="subtitle_pin">El PIN permite activar el bloqueo de registro de tu número y almacena tu cuenta de forma segura en TOPii , solo tú puedes acceder a tu cuenta. Saber más</string>
    <string name="create">Crea tu PIN</string>
    <string name="terms">Términos y política de privacidad</string>
    <string name="error_pin">El PIN no coincide, vuelve a intentar</string>
    <string name="error_otp">Upss codigo incorrecto , intentalo nuevamente</string>
    <string name="onbording_text">Lleva la privacidad contigo Añade tu personalidad en todos tus mensajes.</string>
    <string name="confirm_pin">Confirma tu PIN</string>
    <string name="subtitle_confirm_pin">Introduce el PIN que acabas de crear.</string>
    <string name="title_register">Solo un paso más</string>
    <string name="button_register">Registrar</string>
    <string name="text_switch1_register">He leido y acepto la politica de privacidad</string>
    <string name="text_switch2_register">He leido y acepto las condiciones legales de TOPii</string>
    <string name="cancel">Cancel</string>

    <string name="chats">Chats</string>
    <string name="chats_edit">Editar</string>
    <string name="chats_no_chats">No tienes chats aun</string>
    <string name="chats_new_chat"><u>Nuevo Mensaje</u></string>
    <string name="chats_search_hint">Search</string>
    <string name="chats_action_create_group">Crear Grupo</string>
    <string name="chats_action_search_by_phone">Encontrar Por Número Telefónico</string>
    <string name="chats_action_invite_friends">Invitar Amigos </string>

    <string name="home_title">Historial</string>
    <string name="home_send_payment_text">Enviar\nRemesa</string>
    <string name="home_request_payment_text">Solicitar\nRemesa</string>
    <string name="home_wallet_text">Wallet</string>
    <string name="home_chat_text">Chat</string>
    <string name="home_total_sent_sum_title">Total enviado</string>
    <string name="home_total_requested_sum_title">Total recibido</string>
    <string name="home_transactions_header_title">Recent Transactions</string>

    <string name="send_payment_switch_text">He leído y acepto los Términos de Uso y la Política de Privacidad de Chappi</string>
    <string name="send_payment_button_text">Enviar</string>
    <string name="send_payment_total_amount_title">Resumen</string>
    <string name="send_payment_amount_line_1">Tasa de la tarjeta de débito</string>
    <string name="send_payment_amount_line_2">Nuestra comisión</string>
    <string name="send_payment_amount_line_3">Convertimos</string>
    <string name="send_payment_amount_line_4">Tarifa garantizada (8 horas)</string>
    <string name="send_payment_amount_total">El receptor recive</string>
    <string name="send_payment_card_title">Monto a enviar</string>
    <string name="send_payment_card_you_send">Tu enviar</string>
    <string name="send_payment_card_receiver_receives">El receptor recive</string>
    <string name="send_payment_title">Enviar remesa</string>
    <string name="send_payment_concept_remittance_title">Introduce concepto de la remesa</string>

    <string name="kyc_button_continue">Continuar</string>
    <string name="personal_data_screen_title">Tus datos personales</string>
    <string name="personal_data_name_hint">Nombre</string>
    <string name="personal_data_last_name_hint">Primer Apellido</string>
    <string name="personal_data_second_last_name_hint">Segundo Apellido (opcional)</string>
    <string name="personal_data_description">Escribe tu nombre y apellido tal y como aparece en tu documento de identidad.</string>

    <string name="enter_email_screen_title">Tu correo electrónico</string>
    <string name="enter_email_description">Solo usaremos tu correo electronico para recuperar tu clave y enviarte novedades del producto.</string>

    <string name="birth_date_screen_title">Fecha de nacimiento</string>
    <string name="birth_date_description">Escribe tu fecha de nacimiento como aparece en tu documento de identidad.</string>
    <string name="birth_date_hint">DD/MM/AAAA</string>
    <string name="birth_date_place">País de nacimiento</string>

    <string name="document_screen_title">Documento de Identidad</string>
    <string name="document_screen_description">Introduce tu numero de documento como aparece en tu NIE , NIF o Pasaporte.</string>

    <string name="address_screen_title">Direccion</string>
    <string name="address_screen_description">Escribe tu direccion en tu pais de recidencia.</string>
    <string name="address_address_hint">Direccion</string>
    <string name="address_country_hint">Pais</string>
    <string name="address_region_hint">Estado</string>
    <string name="address_city_hint">Ciudad</string>
    <string name="address_postal_code">Codigo Postal</string>

    <string name="verification_screen_title">Verificación de identidad</string>
    <string name="verification_description">Deberá permitir acceso a la camara para continuar.</string>
    <string name="verification_button_description">No podemos verificar tu identidad sin acceso a tu camara</string>
    <string name="verification_button_text">Conceder acceso a la cámara</string>
    <string name="currency_sample">EUR</string>

    <string name="chat_attachment_camera">Camara</string>
    <string name="chat_attachment_gallery">Galería</string>
    <string name="chat_attachment_document">Documentos</string>
    <string name="chat_attachment_location">Localización</string>
    <string name="chat_attachment_contact">Contactos</string>
    <string name="chat_attachment_transfers">Remesas</string>
    <string name="chat_attachment_share_data">Compartir los datos de mi Wallet</string>
    <string name="chat_attachment_close">Cerrar</string>

    <string name="contacts_title">Contactos</string>
    <string name="contacts_button_next">Siguiente</string>
    <string name="send_payment_plus">+</string>
    <string name="send_payment_select_recipient">Elija el destinatario</string>
    <string name="select_receiver_currency">Select receiver currency</string>
    <string name="send_payment_notes">Nota</string>

    <string name="remittance_detail_title">Detalles de la remesa</string>
    <string name="remittance_detail_subtitle">Remesa enviada</string>
    <string name="remittance_detail_amount">Importe</string>
    <string name="remittance_time_1">It took</string>
    <string name="remittance_time_2">seconds</string>
    <string name="remittance_time_3">to send this remittance</string>
    <string name="remittance_detail_summary_1">Has enviado</string>
    <string name="remittance_detail_summary_2">equivalentes a</string>
    <string name="remittance_detail_summary_3">con tasa de cambio</string>
    <string name="remittance_detail_summary_4">y comisión</string>
    <string name="remittance_detail_summary_5">a</string>
    <string name="remittance_error_btn_text">Regresar</string>
    <string name="remittance_error_subtitle">Parece que no tienes saldo suficiente para esta transacción.</string>
    <string name="remittance_error_title">Oops! Algo salió mal.</string>

    <string name="request_remittance_title">Solicitar remesa</string>
    <string name="request_remittance_button_text">Solicitar</string>
    <string name="card_request_payment_title">Monto a Solicitar</string>
    <string name="card_request_payment_subtitle">Tu Solicitas</string>

    <string name="wallet_add_bank_account_title">Cuenta Bancaria</string>
    <string name="wallet_add_bank_account_description">Por favor Introduce tu número de cuenta bancaria</string>
    <string name="wallet_add_account_select_bank">Seleciona tu banco</string>
    <string name="wallet_add_account_bank_name_title">Banco</string>
    <string name="wallet_add_account_owner_name_title">Nombre del titular</string>
    <string name="wallet_add_account_iban_title">Numero de cuenta / IBAN</string>
    <string name="wallet_add_account_bic_title">BIC/SWIFT</string>
    <string name="wallet_card_added_title">Tu tarjeta se ha agregado corretamente</string>
    <string name="wallet_card_added_subtitle">Ahora puedes enviar remesas ....</string>
    <string name="wallet_added_btn_text">Finalizar</string>
    <string name="wallet_balance_title">Balance</string>
    <string name="wallet_my_balance">Mi Balance</string>
    <string name="wallet_wallet_tab">Wallet</string>
    <string name="wallet_cards_tab">Cards</string>
    <string name="wallet_incomes">Ingresos</string>
    <string name="wallet_transfer_funds">Transferir Fondos</string>
    <string name="wallet_expense">Salidas</string>
    <string name="wallet_withdraw">Retirar con TOPii</string>
    <string name="wallet_hidden_balance">---</string>
    <string name="wallet_analytics">Analytics</string>
    <string name="wallet_enter_card">Enter your card information</string>
    <string name="wallet_card_name_hint">Name</string>
    <string name="wallet_name_on_credit_card">Name on credit card</string>
    <string name="wallet_card_number_title">Card Number</string>
    <string name="wallet_card_number_hint">Card number</string>
    <string name="wallet_expiry_date_title">Expiry Date</string>
    <string name="wallet_expiry_date_hint">MM/YYYY</string>
    <string name="wallet_cvv_title">CVV</string>
    <string name="wallet_cvv_hint">000</string>
    <string name="wallet_set_as_default_card">Set as default card</string>
    <string name="wallet_add_card_btn_text">Add Card</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="error_no_network_title">Sin conexión</string>
    <string name="error_no_network_description">Conéctate a Internet para continuar</string>
    <string name="error_no_network_button_text">Regresar</string>
    <string name="error_wrong_request_title">No hemos podido procesar tu solicitud.</string>
    <string name="error_wrong_request_description">Presiona el boton de continuar y vuelve a intentarlo.</string>
    <string name="error_wrong_request_button_text">Continuar</string>
    <string name="error_unknown_title">Oops! Algo salió mal.</string>
    <string name="error_unknown_description">Parece que no tienes saldo suficiente para esta transacción.</string>
    <string name="error_unknown_button_text">Regresar</string>
    <string name="error_insufficient_funds_title">Saldo insuﬁciente</string>
    <string name="error_insufficient_funds_description">El saldo de tu cuenta es insuﬁciente</string>
    <string name="error_insufficient_funds_button_text">Regresar</string>
    <string name="search_results_hints">Here will be the search results</string>
    <string name="no_results">No results</string>
</resources>