<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <com.topiichat.core.presentation.customview.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarTitle="@string/personal_data_screen_title" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/personal_data_description"
        android:textColor="@color/kyc_text_color"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.topiichat.app.core.presentation.customview.HintEditTextView
        android:id="@+id/text_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:hint="@string/personal_data_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <com.topiichat.app.core.presentation.customview.HintEditTextView
        android:id="@+id/text_last_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        app:hint="@string/personal_data_last_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <com.topiichat.app.core.presentation.customview.HintEditTextView
        android:id="@+id/text_second_last_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        app:hint="@string/personal_data_second_last_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_last_name" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/kyc_button_continue"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_second_last_name" />

</androidx.constraintlayout.widget.ConstraintLayout>