<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.topiichat.core.presentation.customview.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarTitle="@string/address_screen_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0px"
        android:layout_height="0px"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/address_screen_description"
                android:textColor="@color/kyc_text_color" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border_edittext"
                android:fontFamily="@font/sfprodisplaymedium"
                android:gravity="center_vertical"
                android:paddingHorizontal="24dp"
                android:text="@string/address_address_hint"
                android:textColor="@color/kyc_text_color"
                android:textSize="15sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border_edittext"
                android:fontFamily="@font/sfprodisplaymedium"
                android:gravity="center_vertical"
                android:paddingHorizontal="24dp"
                android:text="@string/address_country_hint"
                android:textColor="@color/kyc_text_color"
                android:textSize="15sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

            <TextView
                android:id="@+id/text_region"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border_edittext"
                android:fontFamily="@font/sfprodisplaymedium"
                android:gravity="center_vertical"
                android:paddingHorizontal="24dp"
                android:text="@string/address_region_hint"
                android:textColor="@color/kyc_text_color"
                android:textSize="15sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border_edittext"
                android:fontFamily="@font/sfprodisplaymedium"
                android:hint="@string/address_city_hint"
                android:paddingHorizontal="24dp"
                android:textAlignment="textStart"
                android:textColor="@color/kyc_text_color"
                android:textColorHint="@color/kyc_text_color"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_postal_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border_edittext"
                android:fontFamily="@font/sfprodisplaymedium"
                android:hint="@string/address_postal_code"
                android:inputType="number"
                android:paddingHorizontal="24dp"
                android:textAlignment="textStart"
                android:textColor="@color/kyc_text_color"
                android:textColorHint="@color/kyc_text_color"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/sfprodisplaybold"
                android:text="@string/kyc_button_continue"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/text_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_document" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>